--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Rock_paper_scissor</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -28,7 +28,7 @@
       </div>
       <div>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;scissor</p>
-        <button class="rpsButton" value="✌️">✌</button>
+        <button class="rpsButton" value="✌️">✌️</button>
       </div>
     </div>
     <div class="resultContainer">
